tests/baselines/reference/conditionalExpression1.errors.txt
tests/cases/compiler/conditionalExpression1.ts(1,5): error TS2322: Type '1 | ""' is not assignable to type 'boolean'.
  Type '1' is not assignable to type 'boolean'.


==== tests/cases/compiler/conditionalExpression1.ts (1 errors) ====
    var x: boolean = (true ? 1 : ""); // should be an error
        ~
!!! error TS2322: Type '1 | ""' is not assignable to type 'boolean'.
!!! error TS2322:   Type '1' is not assignable to type 'boolean'.